Sage-Like/preferences/preferences.css
/* ... */
.preferenceCheckboxInput::before {
	display: block;
	content: "";
	background-color: #ffffff;
	height: var(--dot-size);
	width: var(--dot-size);
	margin: var(--dot-margin);
	border-radius: 50%;
	transition: transform 100ms;
}
:root:dir(ltr) .preferenceCheckboxInput:checked::before {
	transform: translateX(var(--dot-transform-ltr-x));
}
:root:dir(rtl) .preferenceCheckboxInput:checked::before {
	transform: translateX(var(--dot-transform-rtl-x));			/* RTL: Move to the LEFT (Checked) */
}
.preferenceCheckboxInput:disabled::before {
	background-color: var(--foreground-color-disabled-control);
}

.preferenceRadioInput {
	appearance: none;
	padding: 0;
	margin: 2px 0;
	outline: none;
	width: 18px;
	height: 18px;
	border-radius: 50%;
	border: 2px solid var(--background-color-input);
	transition: 0.2s all linear;
	background-color: transparent;
}
.preferenceRadioInput:checked {
	border: 6px solid var(--color-control-accent);
	background-color: #ffffff;
}
.preferenceRadioInput:disabled {
	border-color: var(--foreground-color-disabled-control);
	background-color: var(--background-color-disabled-control);
}

.preferenceColorInput {
	width: 26px;
	height: 18px;
	border: none;
	border-radius: 50%;
	margin: 2px 3px;
	padding: 0;
	background-color: transparent;
	box-shadow: 0 0 4px 2px var(--box-shadow-color-swatch);
	cursor: pointer;
}
.preferenceColorInput::-moz-color-swatch {
	border: inherit;
	border-radius: inherit;
	margin: 0;
	padding: 0;
}

.numericInput {
	border: 1px solid #7a7a7a;
	padding: 2px;
	height: 22px;
	width: 50px;
}
.numericInput:focus {
	border-color: var(--color-control-focused);
	box-shadow: 0 0 2.5px 1px var(--color-control-focused);
}
.numericInput:invalid {
	border-color: var(--color-control-invalid);
	box-shadow: 0 0 2.5px 1px var(--color-control-invalid);
}

.preferenceButton {
	--btn-bg-state-color: var(--background-color-button);

	padding: 1px 3px 2px 3px;
	color: var(--foreground-color);
	background-color: var(--btn-bg-state-color);
	border: 1px solid rgb(193, 193, 193);
	border-radius: 2px;
	height: var(--height-preference-button);
	width: 90px;
	text-align: center;
	align-content: center;
	margin-inline-start: 10px;
	font-family: Tahoma, Verdana, Segoe, sans-serif;
	font-size: 13.3333px;
	line-height: 17px;
	outline-offset: -3px;
}
.preferenceButton:hover {
	--btn-bg-state-color: var(--background-color-button-hover);
}
.preferenceButton:active:hover {
	--btn-bg-state-color: var(--background-color-button-active-hover);
}

.controlImage {
	display: inline-block;
	margin: auto 0 auto 0;
	padding-inline-start: 4px;
	filter: drop-shadow(0 0 2px var(--drop-shadow-control-image));
}
.controlImage:not(:last-child) {
	margin-inline-end: 18px;
}
.controlImage > svg|svg {
	display: block;
	width: 20px;
	height: 20px;
}
.controlImage > svg|svg > svg|path {
	d: var(--path-sidebar-icon);
}

.extensionButtons {
	min-height: var(--height-preference);
	height: auto;
	padding-block: 13px;
}

.extensionButtons .preferenceButton {
	min-height: var(--height-preference-button);
	width: 115px;
	height: auto;
	white-space: wrap;
	margin-inline-start: 7px;
}

#btnReloadExtension {
	margin-inline-start: 16px;
}

.helpInfo {
	display: inline-block;
	border-radius: 50%;
	height: 18px;
	width: 18px;
	background-color: var(--background-color-help-info);
	color: var(--foreground-color-help-info);
	font-family: Arial, Helvetica, sans-serif;
	font-size: 14px;
	font-weight: 700;
	text-align: center;
	line-height: 1.3em;
	vertical-align: top;
	margin-block: 2px 0;
	margin-inline: 6px 0;
}
.helpInfo:hover {
	background-color: var(--background-color-hover-help-info);
}

#helpInfoTooltipBox {
	display: none;
	position: absolute;
	max-width: 450px;
	width: auto;
	box-sizing: border-box;
	z-index: 10;
	color: var(--foreground-color);
	background-color: var(--background-color-tooltip-box);
	border: 1px solid var(--foreground-color);
	overflow: hidden;
	outline: none;
}

.tooltipBoxText {
	--font-size: 9pt;
	font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
	font-weight: normal;
	font-size: var(--font-size);
	line-height: calc(var(--font-size) * 1.4);
	padding-block: 3px;
	padding-inline: 6px 9px;
	white-space: pre-line;
}

/*** User font box and Time of day box ***/
.popupBox {
	display: none;
	border: 1px solid var(--border-color-popup-box);
	border-radius: 8px;
	padding: 12px;
	background-color: var(--background-color-popup-box);
	color: inherit;
	box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
	z-index: 2;
	white-space: nowrap;
}
:root:dir(rtl) .popupBox {
	box-shadow: -3px 3px 10px rgba(0, 0, 0, 0.5);
}
.popupBox.preferenceReferenced {
	position: absolute;
}
.popupBox.pageCentered {
	position: fixed;
	top: 50%;
	left: 50%;
	transform: translate(-50%, -100%);
}

.inputPopupBox {
	pointer-events: initial;
	border: 1px solid var(--border-color-popup-box);
	padding: 2px;
}

.popupBoxElementMargined {
	margin: 6px 8px;
}

.popupBoxCaption {
	font-weight: bold;
}

.popupBoxButtons {
	display: flex;
	justify-content: flex-end;
}

#messageBoxText {
	padding: 10px 0 15px;
	max-width: 400px;
	word-wrap: normal;
	white-space: pre-wrap;
	user-select: text;
}

/************************************************************************************/
/**************************** Elements that can 'flash' *****************************/
/************************************************************************************/
:root:dir(ltr) {
	--background-pos-initial-x-direction: right;
	--gradient-to-direction: left;
}
:root:dir(rtl) {
	--background-pos-initial-x-direction: left;
	--gradient-to-direction: right;
}

.isFlashable {
	background-size: 220% 100%;
	background-position: var(--background-pos-initial-x-direction) bottom;
	transition: background-position var(--transition-duration-flash) ease-in 0s;
}
.preferenceButton.isFlashable {
	background-image: linear-gradient(to var(--gradient-to-direction), var(--btn-bg-state-color) 52%, var(--color-flash) 50%);
}
/* ... */

